2007-10-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-saved-search-file.c:
        * libnautilus-private/nautilus-search-directory-file.c:
	Fix handling of mimetype as refstring
	Fix leak of GFile
	Code cleanups

	Patch from Paolo Borelli

2007-10-19  Paolo Borelli  <pborelli@katamail.com>

	* src/file-manager/fm-icon-view.c:
	* src/file-manager/fm-directory-view.c:
	use g_content_type_equals instead of strcasecmp on the mime type.

	* src/nautilus-window-menus.c:
	Remove unneeded includes

2007-10-19  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-emblem-utils.h:
	* libnautilus-private/nautilus-emblem-utils.c:
	* src/nautilus-emblem-sidebar.c:
	* src/nautilus-property-browser.c:

	Make nautilus_emblem_load_pixbuf_for_emblem take a GFile.

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        (nautilus_file_set_display_name):
	Don't crash on NULL display name

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-vfs-file.c:
	Remove NautilusFileMountCallback and just make
	NautilusFileOperationCallback take an extra
	resultant file argument.
	
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-error-reporting.c:
        * src/file-manager/fm-list-view.c:
        * src/file-manager/fm-properties-window.c:
	Update to API change
	
        * src/nautilus-pathbar.c:
        (get_display_name_for_folder):
	Fix crash if NULL display name

2007-10-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
	Set can_mount/unmount to FALSE unless set
	
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c: